11/02/12 r421 Added support for accounts on Charybdis
11/02/11 r416 Added support for ircd-rizon

Changes
12/03/31 Updated GeoIP databases
11/05/04 r435 Fixed formatting of docs/EVENTS
11/04/10 r428 documented the -protocoldebug option in the -help output
11/04/10 r428 made denora accept options that start with --
11/02/11 r419 Updated Denora icon
11/02/11 r416 Updated Windows installer

Fixes
12/03/31 Fixed grammar errors (#1260)
12/02/05 r436 Fixed ADMIN ADD command ignoring supplied host mask
11/04/10 r431 Fixed duplicate call to denora_set_umode() in ircdrizon protocol
11/04/10 r430 Fixed duplicate call to denora_set_umode() in charybdis protocol
11/04/10 r429 Fixed unknown user mode Z in charybdis protocol
11/03/30 r427 Fixed crash on nickchange in ngircd protocol (#1257)
11/02/13 r426 Fixed erroneous ','s in SQL queries in do_account()
11/02/12 r424 Fixed support for accounts on Charybdis at burst (oops)
11/02/12 r422 Fixed compile errors
11/02/12 r421 Fixed memleaks and crashbug in do_p10account
11/02/11 r417 Fixed Denora not running on Windows XP/2003 anymore
11/02/11 r416 Scarynet module was not compiled on windows

Removals
11/02/11 r418 Removed support for Nefarious ircd 1.0-1.2
11/02/11 r416 Removed support for Asuka ircd
11/02/11 r416 Removed support for Hybrid ircd
11/02/11 r416 Removed support for Hyperion ircd
11/02/11 r416 Removed support for ngircd
11/02/11 r416 Removed support for Plexus3 ircd
11/02/11 r416 Removed support for Solidircd
11/02/11 r416 Removed support for Ultimate3 ircd

Developers
Denora Team <dev@denorastats.org>

Contributors
n/a


Denora v1.4.5
-------------

Additions
11/01/02 r402 Added cron script to automatically update GeoIP db files monthly
11/01/11 r391 Win32 compilation: added support for VS 2010, WinSDK 7.1 and MySQL 5.5
10/12/30 r379 [4] Added GeoIP IPv6 support
10/12/29 r374 [2] Added support for user IPv6 addresses with scarynet
10/12/29 r373 [2] Added support for user IPv6 addresses with ircu and unrealircd