@@ -8,7 +8,7 @@
 # This program is free but copyrighted software;
 # see the file COPYING for details.
 #
-# 
+#
 #
 
 # Usage: add a line like this to your crontab:
@@ -18,11 +18,13 @@ DENORARC="@BINDEST@/denorarc"
 DENORADATA="@DATDEST@"
 
 if `wget -q -N http://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz -O $DENORADATA/GeoIP.dat.gz`; then
-      gzip -q -c $DENORADATA/GeoIP.dat.gz > $DENORADATA/GeoIP.dat
+	rm $DENORADATA/GeoIP.dat
+    gzip -d $DENORADATA/GeoIP.dat.gz
 fi
 
 if `wget -q -N http://geolite.maxmind.com/download/geoip/database/GeoIPv6.dat.gz -O $DENORADATA/GeoIPv6.dat.gz`; then
-      gzip -q -c $DENORADATA/GeoIPv6.dat.gz > $DENORADATA/GeoIPv6.dat
+	rm $DENORADATA/GeoIPv6.dat
+	gzip -d $DENORADATA/GeoIPv6.dat.gz
 fi
 
 $DENORARC rehash
